fix css issues on firefox; add google analytic tracking to every page

--- a/web/src/components/Image/Image.module.scss
+++ b/web/src/components/Image/Image.module.scss
@@ -1,12 +1,14 @@
 .Image {
-	height: 100%;
+	max-height: 100%;
 	max-width: 100%;
 	position: relative;
+	height: 100%;
 
 	.preview,
 	.highRes {
-		height: 100%;
+		max-height: 100%;
 		max-width: 100%;
+		height: 100%;
 		vertical-align: bottom;
 	}
 
